# gradience

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  refactor.py  test.ipynb
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
gradience/: tensor.py
gradience/autograd/: autograd_engine.py  context.py  function.py  graph_node.py  node.py
gradience/nn/: __init__.py  parameter.py
gradience/ops/: acos.py  add.py  asin.py  atan.py  cos.py  division.py  exponential.py  logarithm.py  matmul.py  mean.py  multiply.py  negation.py  power.py  relu.py  sigmoid.py  sin.py  sqrt.py  subtract.py  sum.py  tan.py  tanh.py
gradience/testing/: gradcheck.py
gradience/utils/: broadcast.py
tests/: conftest.py  test_autograd.py  test_context.py  test_gradcheck.py  test_ops.py  test_parameter.py  test_tensor.py
