[project]
name = "gradience"
version = "0.1.0"
description = "An open source project aimed to create an autograd engine later extended to a deep learning framework. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pytest>=9.1.1",
]
license = "Apache-2.0"
